--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,34 +1,3 @@
-/******************************************************************
-  Template Name: Ogani
-  Description:  Ogani eCommerce  HTML Template
-  Author: Colorlib
-  Author URI: https://colorlib.com
-  Version: 1.0
-  Created: Colorlib
-******************************************************************/
-
-/*------------------------------------------------------------------
-[Table of contents]
-
-1.  Template default CSS
-	1.1	Variables
-	1.2	Mixins
-	1.3	Flexbox
-	1.4	Reset
-2.  Helper Css
-3.  Header Section
-4.  Hero Section
-5.  Service Section
-6.  Categories Section
-7.  Featured Section
-8.  Latest Product Section
-9.  Contact
-10.  Footer Style
--------------------------------------------------------------------*/
-
-/*----------------------------------------*/
-/* Template default CSS
-/*----------------------------------------*/
 *{
 	font-family: 'Lato', sans-serif;
 }
@@ -39,6 +8,10 @@ body {
 	font-smoothing: antialiased;
 }
 
+.content {
+	margin-top: 160px;
+}
+
 h1,
 h2,
 h3,
@@ -47,7 +20,6 @@ h5,
 h6 {
 	margin: 0;
 	color: #111111;
-	font-weight: 400;
 	font-family: 'Lato', sans-serif;
 }
 
@@ -56,7 +28,7 @@ h1 {
 }
 
 h2 {
-	font-size: 36px;
+	font-size: 30px;
 }
 
 h3 {
@@ -76,7 +48,7 @@ h6 {
 }
 
 p {
-	font-size: 16px;
+	font-size: 15px;
 	font-family: "Cairo", sans-serif;
 	color: #6f6f6f;
 	font-weight: 400;
